chore: bump workload to v0.7.0
Signed-off-by: Guillaume Belanger <guillaume.belanger27@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,7 +1,7 @@
 name: eupf
 title: eUPF
-base: core22
-version: 'v0.6.4'
+base: core24
+version: 'v0.7.0'
 summary: 5G User Plane Function (UPF) based on eBPF
 description: |
   eUPF is the opensource User Plane Function (UPF) project for using inside or "outside" of any 3GPP 5G core.
@@ -14,10 +14,8 @@ grade: stable
 confinement: strict
 
 plugs:
-  bpf: 
+  sys-fs-bpf-upf-pipeline: 
     interface: system-files
-    read:
-    - /sys/fs/bpf/upf_pipeline
     write:
     - /sys/fs/bpf/upf_pipeline
 
@@ -27,10 +25,12 @@ apps:
     install-mode: disable
     command: bin/eupf-start
     plugs:
-      - process-control
-      - network-control
+      - sys-fs-bpf-upf-pipeline
+      - network
       - network-bind
-      - bpf
+      - network-control
+      - process-control
+      - system-observe
 
 parts:
   swag:
@@ -40,12 +40,12 @@ parts:
     source-tag: v1.8.12
     build-snaps:
       - go/1.21/stable
-  
+
   eupf:
     plugin: go
     source: https://github.com/edgecomllc/eupf.git
     source-type: git
-    source-tag: v0.6.4
+    source-tag: v0.7.0
     after:
       - swag
     build-snaps:
